fixed layouts on mobile

--- a/src/sass/imports/_posts-pages.scss
+++ b/src/sass/imports/_posts-pages.scss
@@ -124,6 +124,10 @@
 
 .post-card-content {
   padding: 1.33333em 3.5vw 0.33333em;
+  min-height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .read-more {
@@ -186,6 +190,7 @@
       -ms-flex-direction: row-reverse;
       flex-direction: row-reverse;
       overflow: hidden;
+
     }
 
     .post-card-thumbnail {
@@ -208,10 +213,6 @@
       -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
       flex: 1 1 auto;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-
     }
   }
 }
